--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <dependency>
           <groupId>com.cenqua.clover</groupId>
           <artifactId>clover</artifactId>
-          <version>3.0.2</version>
+          <version>3.1.0-SNAPSHOT</version>
         </dependency>
 
         <!-- Build breaks without these: -->        
