--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,14 @@
     <parent>
         <groupId>org.jvnet.hudson.plugins</groupId>
         <artifactId>plugin</artifactId>
-        <version>1.348</version>
-        <relativePath>../pom.xml</relativePath>
+        <version>1.398</version>
     </parent>
+
+    <scm>
+        <connection>scm:git:git://github.com/hudson-plugins/clover-plugin.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/hudson-plugins/clover-plugin.git</developerConnection>
+        <url>https://github.com/hudson-plugins/clover-plugin</url>
+    </scm>
 
     <artifactId>clover</artifactId>
     <packaging>hpi</packaging>
