HUDSON-8892: Updating pom with details for a release to Sonatype

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <parent>
         <groupId>org.jvnet.hudson.plugins</groupId>
-        <artifactId>plugin</artifactId>
+        <artifactId>hudson-plugin-parent</artifactId>
         <version>1.398</version>
     </parent>
 
