--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     </scm>
     <artifactId>clover</artifactId>
     <packaging>hpi</packaging>
-    <version>3.3.0-SNAPSHOT</version>
+    <version>3.3.0</version>
     <name>Hudson Clover plugin</name>
     <url>http://wiki.hudson-ci.org/display/HUDSON/Clover+Plugin</url>
     <developers>
